// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`logo render custom class 1`] = `

<div>
  <div class="flex flex-row items-center justify-center custom-class">
    <h1 class="flex items-center justify-center">
      <span class="pr-2 text-2xl font-semibold leading-none tracking-wide">
        vlt
      </span>
      <span class="text-2xl font-light leading-none tracking-wide text-neutral-500">
        /vōlt/
      </span>
    </h1>
  </div>
</div>

`;

exports[`logo render default 1`] = `

<div>
  <div class="flex flex-row items-center justify-center">
    <h1 class="flex items-center justify-center">
      <span class="pr-2 text-2xl font-semibold leading-none tracking-wide">
        vlt
      </span>
      <span class="text-2xl font-light leading-none tracking-wide text-neutral-500">
        /vōlt/
      </span>
    </h1>
  </div>
</div>

`;
